# Computer-Architecture.-Part-2.-Processors

./: 0001-fix-truncation-error.patch  0002-formatting-use-tabs-instead-of-spaces.patch  \  calculator.cpp
Lab2/: CMakeLists.txt  Makefile  build.ninja  calculator.c  calculator.h  main.c  rules.ninja
Lab4/: hello.c
Lab5/test3/: Kbuild  hello1.c  hello2.c
Lab5/test3/inc/: hello1.h
